--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "yee",
   "main": "build/index.js",
   "scripts": {
-    "build-js": "webpack --mode production ./src/script.js -o ./bundle.js",
+    "build-js": "webpack --mode production ./src/script.js -o ./js/bundle.js",
     "build": "npm run build-js",
-    "browser-sync": "browser-sync start --server --files './index.js, ./bundle.js, ./*.css'",
-    "watch-js": "webpack --watch --mode development ./src/script.js -o ./bundle.js",
+    "browser-sync": "browser-sync start --server --files './index.html, ./js/*.js, ./css/*.css'",
+    "watch-js": "webpack --watch --mode development ./src/script.js -o ./js/bundle.js",
     "dev": "npm run watch-js | npm run browser-sync",
     "yee": "surge . yee.dog"
   },
