--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.5",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "eslint": "^4.19.1",
+    "eslint-plugin-prettier": "^2.6.2",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.13"
   },
